Fix double scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
     padding-top: 38px;
     height: 100%;
     width: 100%;
-    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .container .editor {
